# Beeclust-ARGoS3

./: CMakeLists.txt  Makefile  README_SN  cmake_install.cmake  foraging.txt
controllers/: CMakeLists.txt  Makefile  cmake_install.cmake
controllers/epuck_obstacleavoidance/: Makefile  cmake_install.cmake
controllers/eyebot_circle/: Makefile  cmake_install.cmake
controllers/eyebot_flocking/: Makefile  cmake_install.cmake
controllers/footbot_diffusion/: Makefile  cmake_install.cmake
controllers/footbot_flocking/: Makefile  cmake_install.cmake
controllers/footbot_foraging/: Makefile  cmake_install.cmake
controllers/footbot_gripping/: Makefile  cmake_install.cmake
controllers/footbot_manualcontrol/: Makefile  cmake_install.cmake
controllers/footbot_nn/: Makefile  (+1 more)
experiments/: diffusion_10.argos
src/: CMakeLists.txt  CPherofield.cpp  CPherofield.h  Makefile  beeclust_loop_function.cpp  beeclust_loop_function.h  beeclust_proximity_default_sensor.cpp  beeclust_proximity_default_sensor.h  beeclust_proximity_sensor_equipped_entity.cpp  beeclust_proximity_sensor_equipped_entity.h  ci_beeclust_proximity_sensor.cpp  ci_beeclust_proximity_sensor.h  ci_footbot_beeclust_proximity_sensor.cpp  ci_footbot_beeclust_proximity_sensor.h  ctimer.cpp  ctimer.h  dynamics2d_footbot_beeclust_model.cpp  dynamics2d_footbot_beeclust_model.h  footbot_beeclust.cpp  footbot_beeclust.h  footbot_beeclust_entity.cpp  footbot_beeclust_entity.h  footbot_beeclust_proximity_sensor.cpp  footbot_beeclust_proximity_sensor.h  qtopengl_footbot_beeclust.cpp  qtopengl_footbot_beeclust.h
(+5 files in other folders)
